chore: Updated btn-icon color

--- a/client/wildcard/src/components/Button/Button.module.scss
+++ b/client/wildcard/src/components/Button/Button.module.scss
@@ -15,6 +15,7 @@
     display: inline-block;
     text-align: center;
     vertical-align: middle;
+    background-color: transparent;
     border: 1px solid transparent;
     user-select: none;
     font-size: 0.875rem;
@@ -26,21 +27,6 @@
     &:disabled {
         cursor: not-allowed;
     }
-}
-
-.btn.btn-sm {
-    // Use string interpolation and calc() to avoid using Sass own max() function.
-    // See: https://github.com/sass/node-sass/issues/2815#issuecomment-575926329
-    font-size: calc(min(0.75rem, #{(11/12)}em));
-    line-height: 1rem;
-    letter-spacing: -(0.25/12) + em;
-    padding: var(--btn-padding-y-sm) 0.5rem;
-}
-
-.btn.btn-lg {
-    padding: var(--btn-padding-y-lg) var(--btn-padding-x-lg);
-    font-size: var(--font-size-lg);
-    line-height: var(--btn-line-height-lg);
 }
 
 .btn-link {
@@ -90,13 +76,28 @@
     display: inline-block;
 }
 
+.btn-sm {
+    // Use string interpolation and calc() to avoid using Sass own max() function.
+    // See: https://github.com/sass/node-sass/issues/2815#issuecomment-575926329
+    font-size: calc(min(0.75rem, #{(11/12)}em));
+    line-height: 1rem;
+    letter-spacing: -(0.25/12) + em;
+    padding: var(--btn-padding-y-sm) 0.5rem;
+}
+
+.btn.btn-lg {
+    padding: var(--btn-padding-y-lg) var(--btn-padding-x-lg);
+    font-size: var(--font-size-lg);
+    line-height: var(--btn-line-height-lg);
+}
+
 // This class is meant for clickable icons. It is NOT meant for buttons with icons in it or for nav
 // items.
 .btn.btn-icon {
     margin: 0;
     padding: 0;
     background: transparent;
-    color: var(--icon-color);
+    color: inherit;
     display: flex;
     align-items: center;
     border: none;
