--- a/client/vscode/src/webview/history-sidebar/HistorySidebar.module.scss
+++ b/client/vscode/src/webview/history-sidebar/HistorySidebar.module.scss
@@ -8,6 +8,14 @@
         background: none;
     }
 
+    a,
+    ul,
+    li,
+    span,
+    button {
+        font-size: var(--vscode-editor-font-size) !important;
+    }
+
     &__sticky-box {
         @media (--md-breakpoint-down) {
             // Sidebar shouldn't be sticky in smaller screens
@@ -27,6 +35,7 @@
 
 .sidebar-section {
     isolation: isolate; // Prevent the z-index below from leaking out of this container
+    margin-bottom: 1rem;
 
     &__tabs-header {
         margin-top: 1.25rem;
@@ -36,9 +45,11 @@
     &__button-link {
         // The global font-weight for .btn elements is 500, which also applies to
         // link-like buttons. But in this context we want it to be 400.
-        font-weight: 400;
-        font-size: 0.75rem;
+        font-weight: 300;
+        color: var(--vscode-textLink-foreground) !important;
+        font-size: var(--vscode-editor-font-size) !important;
         padding: 0;
+        margin: 0;
     }
 
     &__collapse-button {
@@ -57,8 +68,17 @@
 
     &__list {
         list-style-type: none;
-        max-height: 12rem;
+        max-height: 8rem;
         overflow: auto;
+        // Negative margin and positive padding allows focus rings to not be cut off by overflow:auto
+        margin: 0 -0.125rem;
+        padding: 0.125rem;
+    }
+
+    &__cta {
+        list-style-type: none;
+        overflow: auto;
+        min-height: 8rem;
         // Negative margin and positive padding allows focus rings to not be cut off by overflow:auto
         margin: 0 -0.125rem;
         padding: 0.125rem;
@@ -71,7 +91,8 @@
 
     &__list-item {
         display: flex;
-        font-size: 0.75rem;
+        // font-size: 0.75rem;
+        font-size: var(--vscode-editor-font-size);
         padding: 0.25rem 0.375rem;
         border: 0;
         border-radius: 3px;
@@ -123,4 +144,12 @@
     text-transform: uppercase;
     font-size: var(--vscode-font-size) !important;
     color: var(--vscode-textPreformat-foreground);
+}
+
+.button,
+.button:link,
+.button:visited {
+    font-size: var(--vscode-font-size) !important;
+    background-color: var(--vscode-button-background);
+    color: var(--vscode-button-foreground);
 }
