--- a/client/web/src/enterprise/insights/components/insights-view-grid/components/backend-insight/components/drill-down-filters-panel/components/drill-down-filters-form/DrillDownFiltersForm.module.scss
+++ b/client/web/src/enterprise/insights/components/insights-view-grid/components/backend-insight/components/drill-down-filters-panel/components/drill-down-filters-form/DrillDownFiltersForm.module.scss
@@ -1,10 +1,10 @@
 .description {
     display: inline-block;
-    margin: 0.5rem 0 0.75rem;
+    margin: 0.75rem 0;
 }
 
 .footer {
     display: flex;
     flex-wrap: wrap;
-    padding: 0.75rem 0 0.75rem;
+    padding: 0.75rem 0;
 }
