--- a/client/vscode/src/webview/search-panel/SearchResults.module.scss
+++ b/client/vscode/src/webview/search-panel/SearchResults.module.scss
@@ -202,3 +202,52 @@
         display: none;
     }
 }
+
+// Origin from @sourcegraph/web/src/search/results/ButtonDropdownCta.module.scss
+.button-dropdown-cta {
+    font-size: var(--vscode-editor-font-size);
+
+    &__container {
+        width: 31rem;
+        padding: 0.5rem;
+    }
+
+    &__toggle {
+        border-radius: var(--border-radius) !important;
+        padding: 0.375rem 0.5rem;
+    }
+
+    &__title {
+        margin-bottom: 0.25rem;
+        font-size: var(--vscode-font-size);
+    }
+
+    &__copy-text {
+        font-size: var(--vscode-font-size);
+    }
+
+    &__icon {
+        // stylelint-disable-next-line declaration-property-unit-whitelist
+        padding: 15px;
+        border-radius: var(--border-radius);
+        border: none;
+        color: var(--merged-3);
+
+        svg {
+            margin-right: 0 !important;
+        }
+    }
+
+    &__wrapper {
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        margin-bottom: 1rem;
+    }
+
+    &__button {
+        font-size: var(--vscode-editor-font-size);
+        border: none;
+        padding: 0.5rem 1.5rem;
+    }
+}
