--- a/client/web/src/enterprise/catalog/pages/group/tabs/overview/GroupOverviewTab.module.scss
+++ b/client/web/src/enterprise/catalog/pages/group/tabs/overview/GroupOverviewTab.module.scss
@@ -1,3 +1,4 @@
+// TODO(sqs): factor out box-grid between the 2 places it's defined?
 .box-grid {
     list-style-type: none;
     margin-bottom: 0;
