--- a/client/web/src/enterprise/catalog/pages/source-set-at-tree/SourceSetAtTreePage.module.scss
+++ b/client/web/src/enterprise/catalog/pages/source-set-at-tree/SourceSetAtTreePage.module.scss
@@ -1,5 +1,6 @@
 .tabs {
-    // Make the horizontal border span the entire width of the container.
+    // Make the horizontal border underneath the tabs span the entire width of the container for
+    // better visual hierarchy.
     margin-left: calc(-1 * 1.5 * var(--spacer));
     margin-right: calc(-1 * 1.5 * var(--spacer));
     padding-left: calc(1.5 * var(--spacer)) !important;
@@ -9,4 +10,6 @@
 .tab-content {
     overflow-y: auto;
     overflow-x: hidden;
+    flex: 1;
+    align-self: stretch;
 }
