--- a/client/vscode/src/webview/index.scss
+++ b/client/vscode/src/webview/index.scss
@@ -132,6 +132,7 @@ a,
     div {
         background-color: transparent !important;
     }
+    margin-right: 0 !important;
 }
 
 .result-container__header {
