--- a/client/branded/src/global-styles/index.scss
+++ b/client/branded/src/global-styles/index.scss
@@ -118,6 +118,7 @@ $spacer: 1rem;
 @import 'wildcard/src/global-styles/breakpoints';
 @import 'shared/src/global-styles/icons';
 @import './background';
+@import './card';
 @import './dropdown';
 @import './meter';
 @import './popover';
