--- a/client/vscode/src/webview/search-sidebar/SearchSidebar.module.scss
+++ b/client/vscode/src/webview/search-sidebar/SearchSidebar.module.scss
@@ -2,6 +2,7 @@
     padding: 0;
     margin-top: 0.125rem;
     color: var(--vscode-sideBar-foreground);
+    margin-bottom: 1.5rem;
 
     & [data-reach-tabs] {
         // Override our default background color.
