--- a/client/web/src/global/GlobalCodeIntel.module.scss
+++ b/client/web/src/global/GlobalCodeIntel.module.scss
@@ -5,10 +5,15 @@
     background-color: var(--body-bg);
 }
 
-.cool-code-intel-status {
-    min-width: 24vw;
-    max-width: 50vw;
+.cool-code-intel-tabs {
+    min-width: 30vw;
+    max-width: 35vw;
 
     min-height: 27rem; /* avoid jitter when only loading indicator is shown */
-    max-height: 70vh;
+    max-height: 27vh;
+}
+
+.cool-code-intel-references {
+    max-height: 20vw;
+    overflow: auto;
 }
