implement search results view

--- a/client/vscode/src/webview/index.scss
+++ b/client/vscode/src/webview/index.scss
@@ -106,3 +106,7 @@ a,
         background: transparent !important;
     }
 }
+
+// Override Result Page style with vscode theme
+
+// TODO: override Sourcegraph syntax highlighting with VS Code theme.
