Bit more styling

--- a/client/web/src/global/GlobalCodeIntel.module.scss
+++ b/client/web/src/global/GlobalCodeIntel.module.scss
@@ -14,8 +14,15 @@
 }
 
 .cool-code-intel-references {
-    max-height: 20vw;
-    overflow: auto;
+    // max-height: 20vw;
+    // overflow: auto;
+}
+
+.cool-code-intel-reference {
+    &--active {
+        background-color: var(--secondary-2);
+        color: var(--primary);
+    }
 }
 
 .resizable-panel {
