Only focus on core transitions for now

--- a/client/branded/src/global-styles/index.scss
+++ b/client/branded/src/global-styles/index.scss
@@ -85,7 +85,7 @@ $table-border-color: var(--border-color);
 $hr-border-color: var(--border-color);
 $hr-margin-y: 0.25rem;
 
-// Disable Bootstrap transitions
+// Disable all Bootstrap transitions
 $enable-transitions: false;
 
 // Spacer
@@ -102,6 +102,9 @@ $spacer: 1rem;
 @import 'bootstrap/scss/reboot';
 @import 'bootstrap/scss/utilities';
 @import 'bootstrap/scss/grid';
+
+// Note: This also contains some non-transition styles for the .collapse and .fade classNames, we should move this to a separate file and remove the import
+@import 'bootstrap/scss/transitions';
 
 // Modified in `./buttons.scss`
 @import 'bootstrap/scss/buttons';
