--- a/client/branded/src/global-styles/progress.scss
+++ b/client/branded/src/global-styles/progress.scss
@@ -28,4 +28,5 @@
     text-align: center;
     white-space: nowrap;
     background-color: var(--progress-bar-bg);
+    transition: width 0.6s ease;
 }
