--- a/client/browser/src/shared/code-hosts/bitbucket-cloud/codeHost.module.scss
+++ b/client/browser/src/shared/code-hosts/bitbucket-cloud/codeHost.module.scss
@@ -1,6 +1,7 @@
 .secondary-button-base {
     background-color: var(--secondary);
     color: var(--body-color);
+    transition: background-color 150ms;
 
     &:hover,
     &:focus {
@@ -12,6 +13,7 @@
 
 .action-item-active-base {
     background: rgba(9, 30, 66, 0.08);
+    transition: background 100ms;
 }
 
 .icon {
