--- a/client/branded/src/components/ToggleBig.module.scss
+++ b/client/branded/src/components/ToggleBig.module.scss
@@ -84,6 +84,8 @@
 .bar {
     opacity: 0.2;
     background-color: var(--text-muted);
+    transition: all 0.3s;
+    transition-property: opacity;
 
     &--on {
         background-color: var(--primary);
