--- a/client/wildcard/src/components/Badge/Badge.module.scss
+++ b/client/wildcard/src/components/Badge/Badge.module.scss
@@ -4,6 +4,8 @@
     --badge-padding-y: 0.125rem;
     --badge-padding-x: 0.375rem;
     --badge-border-radius: 3px;
+    --badge-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
+        box-shadow 0.15s ease-in-out;
 }
 
 .badge {
@@ -55,6 +57,10 @@ a.badge:focus {
     --badge-padding-y: 0;
     --badge-padding-x: 0.25rem;
     --badge-border-radius: 2px;
+}
+
+a.badge {
+    transition: var(--badge-transition);
 }
 
 // Base Variants
