--- a/client/wildcard/src/components/PageSelector/PageSelector.module.scss
+++ b/client/wildcard/src/components/PageSelector/PageSelector.module.scss
@@ -11,6 +11,7 @@
 .button {
     min-width: 2rem;
     padding: 0.25rem 0.5rem;
+    transition: none; // Remove transitions to improve pagination layout shifting
 
     &:focus,
     &:hover {
