--- a/client/shared/src/components/FileMatchChildren.module.scss
+++ b/client/shared/src/components/FileMatchChildren.module.scss
@@ -9,13 +9,17 @@
 .item {
     display: flex;
     align-items: center;
-    /* A combination of padding and margin is used to make sure that the
+
+    /*
+     * A combination of padding and margin is used to make sure that the
      * box-shadow used to mark the item as focused is visible.
      */
     padding: 0.125rem 0.375rem;
     margin: 0.125rem;
     background-color: var(--code-bg);
-    /* Overflow has to be set here instead of the wrapper otherwise the focus
+
+    /*
+     * Overflow has to be set here instead of the wrapper otherwise the focus
      * box-shadow is off when the item is scrolled.
      */
     overflow-x: auto;
