Add a file url input to the file block to auto-fill the inputs from the url.

--- a/client/web/src/search/notebook/fileBlock/SearchNotebookFileBlockInputs.module.scss
+++ b/client/web/src/search/notebook/fileBlock/SearchNotebookFileBlockInputs.module.scss
@@ -12,7 +12,8 @@
 }
 
 .revision-input:not(:focus):not(:active),
-.line-range-input:not(:focus):not(:active) {
+.line-range-input:not(:focus):not(:active),
+.file-url-input:not(:focus):not(:active) {
     border: 1px solid var(--border-color);
 }
 
