--- a/client/shared/src/extensions/devtools/index.module.scss
+++ b/client/shared/src/extensions/devtools/index.module.scss
@@ -5,5 +5,5 @@
     min-height: 27rem; /* avoid jitter when only loading indicator is shown */
     max-height: 70vh;
 
-    padding: 0.25em 0.5em;
+    padding: 0.25rem 0.5rem;
 }
