--- a/client/web/src/views/components/view/content/chart-view-content/charts/line/components/LineChartContent.module.scss
+++ b/client/web/src/views/components/view/content/chart-view-content/charts/line/components/LineChartContent.module.scss
@@ -1,9 +1,9 @@
 .content {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
+    //position: absolute;
+    //width: 100%;
+    //height: 100%;
+    //top: 0;
+    //left: 0;
 
     &--with-cursor {
         cursor: pointer;
