Add dismiss button for search cta

--- a/client/vscode/src/webview/search-panel/index.module.scss
+++ b/client/vscode/src/webview/search-panel/index.module.scss
@@ -84,3 +84,8 @@
         height: 100%;
     }
 }
+
+.cta-container {
+    background-color: var(--vscode-editorWidget-background) !important;
+    font-size: var(--vscode-font-size) !important;
+}
