Fix code monitor button and update save search form style

--- a/client/vscode/src/webview/search-panel/components/SavedSearchForm.module.scss
+++ b/client/vscode/src/webview/search-panel/components/SavedSearchForm.module.scss
@@ -1,13 +1,14 @@
+.container {
+    background-color: var(--vscode-editorWidget-background) !important;
+    padding: 0.5rem;
+}
+
 .checkbox {
     margin-right: 0.25rem;
 }
 
 .label {
     font-weight: bold;
-}
-
-.submit-button {
-    margin-bottom: 1rem;
 }
 
 // Hide icon in alert
