--- a/client/web/src/notebooks/blocks/markdown/NotebookMarkdownBlock.module.scss
+++ b/client/web/src/notebooks/blocks/markdown/NotebookMarkdownBlock.module.scss
@@ -84,12 +84,18 @@
     }
 }
 
-:global(.notebook-markdown-heading-link) {
+.heading-link {
     color: var(--text-muted-transparent);
     margin-right: 0.25rem;
 
     &:hover {
         color: var(--text-muted);
         text-decoration: none;
+    }
+
+    // Anchor links are not useful in an embedded context (iframes)
+    // because you can't view the URL, so we hide them.
+    .is-embedded & {
+        display: none;
     }
 }
