--- a/client/web/src/notebooks/notebook/NotebookOutline.module.scss
+++ b/client/web/src/notebooks/notebook/NotebookOutline.module.scss
@@ -46,27 +46,27 @@
     text-overflow: ellipsis;
     color: var(--text-muted);
     font-size: 0.75rem;
+}
 
-    &:global(.heading-1) {
-        font-weight: 500;
-        padding-left: 0.5rem;
+.heading-1 {
+    font-weight: 500;
+    padding-left: 0.5rem;
 
-        &:not(:first-child) {
-            padding-top: 0.5rem;
-        }
-
-        .highlight-dot {
-            left: -0.5rem;
-        }
+    &:not(:first-child) {
+        padding-top: 0.5rem;
     }
 
-    &:global(.heading-2) {
-        font-weight: 400;
-        padding: 0.5rem 0 0 1.25rem;
+    .highlight-dot {
+        left: -0.5rem;
+    }
+}
 
-        .highlight-dot {
-            left: -1.25rem;
-        }
+.heading-2 {
+    font-weight: 400;
+    padding: 0.5rem 0 0 1.25rem;
+
+    .highlight-dot {
+        left: -1.25rem;
     }
 }
 
