--- a/client/web/src/tour/components/Tour/Tour.module.scss
+++ b/client/web/src/tour/components/Tour/Tour.module.scss
@@ -1,3 +1,4 @@
+@import 'wildcard/src/global-styles/breakpoints';
 :global(.theme-light) {
     --getting-started-tour-oc-blue-bg: var(--oc-blue-1);
     --getting-started-tour-oc-blue-border: var(--oc-blue-2);
@@ -88,6 +89,18 @@
     }
 }
 
+.completed-items {
+    flex-grow: 2 !important;
+
+    &-inner {
+        display: flex;
+        gap: 7.5rem;
+
+        @media (--md-breakpoint-down) {
+            gap: 2rem;
+        }
+    }
+}
 .completed-check-icon {
     margin-top: 0.125rem;
 }
