--- a/client/web/src/search/SearchStack.module.scss
+++ b/client/web/src/search/SearchStack.module.scss
@@ -68,7 +68,7 @@
     }
 }
 
-.newNote {
+.new-note {
     background-color: var(--color-bg-2);
 
     :global(.theme-dark) & {
@@ -86,7 +86,7 @@
             display: none;
         }
 
-        .toggleIcon {
+        .toggle-icon {
             transform: rotate(180deg);
         }
     }
