Prerender all panel videos.

--- a/client/web/src/notebooks/listPage/NotebooksGettingStarted.module.scss
+++ b/client/web/src/notebooks/listPage/NotebooksGettingStarted.module.scss
@@ -28,3 +28,9 @@
 .selected-panel-button {
     color: var(--primary);
 }
+
+.right {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
