Update icons and illustrations

--- a/client/web/src/search/SearchStack.module.scss
+++ b/client/web/src/search/SearchStack.module.scss
@@ -17,7 +17,10 @@
         position: fixed;
         right: 0.75rem;
         bottom: 0.75rem;
-        width: 20rem;
+
+        &.open {
+            width: 20rem;
+        }
     }
 
     h2 {
