--- a/client/web/src/notebooks/notebookPage/NotebookPage.module.scss
+++ b/client/web/src/notebooks/notebookPage/NotebookPage.module.scss
@@ -9,7 +9,9 @@
 .spacer {
     // Allows scrolling past last blocks in the notebook
     // for easier editing.
-    height: 80vh;
+    height: 40vh;
+    display: flex;
+    align-items: flex-end;
 }
 
 .auto-save-indicator {
@@ -41,5 +43,33 @@
 
     @media (--lg-breakpoint-down) {
         min-width: 0;
+    }
+}
+
+.notepad-cta {
+    position: relative;
+    bottom: 0;
+    max-width: #{$viewport-md};
+    margin: auto;
+    margin-bottom: 1rem;
+
+    &--close-button {
+        position: absolute;
+        right: 0;
+        top: 0;
+        margin: 0.5rem;
+    }
+
+    &--content {
+        display: flex;
+        align-items: center;
+
+        @media (--xs-breakpoint-down) {
+            flex-direction: column;
+        }
+
+        p:last-child {
+            margin-bottom: 0;
+        }
     }
 }
