fix ts and eslint errors

--- a/client/web/src/enterprise/batches/create/RunServerSideModal.module.scss
+++ b/client/web/src/enterprise/batches/create/RunServerSideModal.module.scss
@@ -51,7 +51,7 @@
     background-color: var(--body-bg);
     border: 1px solid var(--border-color);
     padding: 0.8rem;
-    margin-bottom: 8%;
+    margin-bottom: 0.8rem;
 }
 
 .right-bottom {
@@ -61,5 +61,5 @@
 }
 
 ul {
-    padding-left: 5%;
+    padding-left: 0.5rem;
 }
