--- a/client/web/src/enterprise/codeintel/RepositoryMenu.module.scss
+++ b/client/web/src/enterprise/codeintel/RepositoryMenu.module.scss
@@ -15,9 +15,9 @@
 }
 
 .braindot::after {
-    content: '';
+    content: "";
     position: absolute;
-    bottom: 0.20rem;
+    bottom: 0.2rem;
     right: 0.25rem;
     border-radius: 1rem;
     width: 0.75rem;
